# enton

./: .env.docker  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: live_yolo.py  load_commonsense.py  optimize_models.py  smoke_test_f1.py  verify_phase2.py  verify_phase3.py
src/enton/: __init__.py  __main__.py  activity.py  app.py  brain.py  config.py  ears.py  events.py  memory.py  overlay.py  persona.py  self_model.py  vision.py  voice.py
src/enton/action/: __init__.py  voice.py
src/enton/channels/: __init__.py  base.py  discord.py  manager.py  telegram.py  voice.py  web.py
src/enton/cognition/: __init__.py  brain.py  desires.py  dream.py  fuser.py  humor.py  metacognition.py  persona.py  planner.py  prediction.py  prompts.py  sub_agents.py
src/enton/cognition/i18n/: __init__.py  en.py  pt_br.py  zh.py
src/enton/core/: __init__.py  awareness.py  blob_store.py  commonsense.py  config.py  context_engine.py  crawler_engine.py  cuda_lock.py  error_handler.py  events.py  extension_registry.py  hardware.py  knowledge_crawler.py  lifecycle.py  memory.py  memory_tiers.py  metrics.py  process_manager.py  self_model.py  tools.py  visual_memory.py  vram_manager.py
src/enton/core/gwt/: __init__.py  message.py  module.py  workspace.py
src/enton/core/gwt/modules/: __init__.py  agentic.py  executive.py  github.py  perception.py
src/enton/perception/: __init__.py  actions.py  activity.py  ears.py  emotion.py  faces.py  overlay.py  sounds.py  viewer.py  vision.py
src/enton/providers/: __init__.py  android_bridge.py  base.py  claude_code.py  edge_tts_provider.py  gemini_cli.py  google.py  local.py  nvidia.py  openai_compat.py  qwen_tts.py  qwen_vl.py
src/enton/skills/: __init__.py  _shell_state.py  ai_delegate_toolkit.py  android_toolkit.py  base.py  blob_toolkit.py  browser_toolkit.py  channel_toolkit.py  coding_toolkit.py  crypto_toolkit.py  describe_skill.py  describe_toolkit.py  desktop_toolkit.py  extension_toolkit.py  face_skill.py  face_toolkit.py  file_toolkit.py  forge_engine.py  forge_toolkit.py  gcp_toolkit.py  github_learner.py  god_mode_toolkit.py  greet.py  hass_toolkit.py  knowledge_toolkit.py  media_toolkit.py  memory_skill.py  memory_toolkit.py  n8n_toolkit.py  network_toolkit.py  neurosurgeon_toolkit.py  planner_skill.py  planner_toolkit.py  process_toolkit.py  ptz_skill.py  ptz_toolkit.py  react.py  screenpipe_toolkit.py  search_skill.py  search_toolkit.py  (+9 more)
tests/: conftest.py  manual_test_crypto.py  manual_test_godmode.py  manual_test_neurosurgeon.py  test_ai_delegate.py  test_android_toolkit.py  test_awareness.py  test_commonsense.py  test_config.py  test_desires.py  test_dream.py  test_error_handler.py  test_extension_registry.py  test_forge.py  test_knowledge_crawler.py  test_memory_tiers.py  test_metacognition.py  test_persona.py  test_shell_enhanced.py  test_skill_registry.py  test_sub_agents.py  test_tts_providers.py  test_visual_memory.py  test_vram_manager.py
tests/cognition/: test_i18n.py  test_metacognition.py  test_prediction.py  test_prompts.py
tests/core/: test_app_structure.py  test_context_engine.py  test_gwt.py  test_gwt_integration.py  test_gwt_perception.py  test_hardware.py  test_lifecycle.py  test_process_manager.py
tests/skills/: test_github_learner.py  test_shell_security.py  test_start_skills.py  test_toolkits.py
