[project]
name = "enton"
version = "0.1.0"
description = "Autonomous AI robot assistant with vision, voice, and personality"
readme = "README.md"
authors = [{ name = "Gabriel Maia", email = "gabrielmaialva33@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.0",
    "google-cloud-speech>=2.28",
    "google-cloud-texttospeech>=2.22",
    "nvidia-riva-client>=2.17",
    "huggingface-hub>=0.27",
    "ultralytics>=8.3",
    "opencv-python-headless>=4.10",
    "sounddevice>=0.5",
    "numpy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "pydantic-settings>=2.7",
    "ollama>=0.4",
    "kokoro>=0.9",
    "faster-whisper>=1.1",
]

[dependency-groups]
dev = ["ruff>=0.9", "pytest>=8.0", "pytest-asyncio>=0.25"]

[project.scripts]
enton = "enton.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enton"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
