[project]
name = "enton"
version = "0.1.0"
description = "Autonomous AI robot assistant with vision, voice, and personality"
readme = "README.md"
authors = [{ name = "Gabriel Maia", email = "gabrielmaialva33@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    # Agno framework (core + provider extras)
    "agno[ollama,groq,google,nvidia,openrouter,qdrant]>=2.0",
    # Google Cloud (STT/TTS only — LLM via Agno)
    "google-genai>=1.0",
    "google-cloud-speech>=2.28",
    "google-cloud-texttospeech>=2.22",
    # NVIDIA Riva (STT/TTS only — LLM via Agno)
    "nvidia-riva-client>=2.17",
    # Perception
    "ultralytics>=8.3",
    "opencv-python>=4.10",
    "sounddevice>=0.5",
    "numpy>=2.0",
    "faster-whisper>=1.1",
    "silero-vad>=5.1",
    "insightface>=0.7",
    "onnxruntime-gpu>=1.19",
    # TTS
    "kokoro>=0.9",
    "qwen-tts>=0.1",
    "edge-tts>=7.0",
    "numba>=0.60",  # force modern numba for Python 3.12+ (qwen-tts→librosa chain)
    # VLM local (transformers — last resort)
    "transformers>=4.47",
    "accelerate>=1.2",
    "torch>=2.5",
    "qwen-vl-utils>=0.0.8",
    # Visual Memory & Knowledge (v0.3.0)
    "open-clip-torch>=2.26",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    # Self-Evolution (v0.4.0)
    "watchfiles>=1.0",
    # System & infra
    "psutil>=6.0",
    "redis>=5.0",
    "aio-pika>=9.4",
    "asyncpg>=0.30",
    # Channels (v0.9.0)
    "aiogram>=3.15",  # Telegram
    "py-cord>=2.6",   # Discord
    # API & dashboard
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "websockets>=14.0",
    "pydantic-settings>=2.7",
    # Required by Agno
    "openai>=1.50",
    "sqlalchemy>=2.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = ["ruff>=0.9", "pytest>=8.0", "pytest-asyncio>=0.25"]

[project.scripts]
enton = "enton.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/enton"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "UP", "B", "SIM", "TCH", "PL", "RUF", "A", "C4", "ISC", "LOG"
]
ignore = ["PLR0913", "PLR2004", "RUF012", "PLC0415", "RUF006", "TC002", "PLW1510"]  # too many args, magic numbers, mutable class defaults, conditional imports, fire-and-forget tasks, conditional 3rd-party imports, subprocess check

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "hardware: requires physical hardware (camera, mic, GPU)",
]
